# supa-recast

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .vimspector.json  Dockerfile  README.md  debug.py  docker-entrypoint.sh  pyproject.toml  test.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: publish.yml  test.yml
supa-recast/: __init__.py  pyproject.toml
supa_recast/: __init__.py  dummy.py  mymethod.py
tests/: test_dummy.py
