[tool.poetry]
name = "supa-recast"
version = "0.0.1"
description = ""
authors = ["Thomas Fraunholz <tf@wogra.com>"]
readme = "README.md"
packages = [{include = "supa_recast"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"


[tool.poetry.group.nvim.dependencies]
neovim = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
